add new website from server na

--- a/xem-phim-bo/tang-hai-hoa/index.html
+++ b/xem-phim-bo/tang-hai-hoa/index.html
@@ -1196,7 +1196,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             51
+             52
             </dd>
             <br/>
            </dl>
@@ -1754,18 +1754,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/oliver-va-nhung-nguoi-ban" title="Oliver Và Những Người Bạn">
+          <a class="list-top-movie-link" href="/phim-moi/cau-lac-bo-boi-nam-boi-den-tan-cung-the-gioi-giac-mo" title="Câu lạc bộ bơi nam – Bơi đến tận cùng thế giới – Giấc mơ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oliver-va-nhung-nguoi-ban-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-lac-bo-boi-nam-boi-den-tan-cung-the-gioi-giac-mo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Oliver Và Những Người Bạn
+             Câu lạc bộ bơi nam – Bơi đến tận cùng thế giới – Giấc mơ
             </span>
             <span class="list-top-movie-item-en">
-             Oliver &amp; Company
+             Road to the World
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1776,18 +1776,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoc-vien-greenhouse-phan-2" title="Học viện Greenhouse (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/bai-ca-danh-tang-latasha" title="Bài ca dành tặng Latasha">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoc-vien-greenhouse-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bai-ca-danh-tang-latasha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Học viện Greenhouse (Phần 2)
+             Bài ca dành tặng Latasha
             </span>
             <span class="list-top-movie-item-en">
-             Greenhouse Academy (Season 2)
+             A Love Song for Latasha
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1798,18 +1798,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chieu-dieu-truyen-thuyet-niet-ban" title="Chiêu Diêu: Truyền Thuyết Niết Bàn">
+          <a class="list-top-movie-link" href="/phim-moi/pretty-ghost" title="Pretty Ghost">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chieu-dieu-truyen-thuyet-niet-ban-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pretty-ghost-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chiêu Diêu: Truyền Thuyết Niết Bàn
+             Pretty Ghost
             </span>
             <span class="list-top-movie-item-en">
-             The Lengend of Xuan Ling
+             Pretty Ghost
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1820,21 +1820,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cong-chua-toc-xu" title="Công Chúa Tóc Xù">
+          <a class="list-top-movie-link" href="/phim-moi/tran-tinh-lenh-chi-loan-phach" title="Trần Tình Lệnh Chi Loạn Phách">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-chua-toc-xu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tran-tinh-lenh-chi-loan-phach-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Công Chúa Tóc Xù
+             Trần Tình Lệnh Chi Loạn Phách
             </span>
             <span class="list-top-movie-item-en">
-             Brave
+             The Untamed: Fatal Journey
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1842,18 +1842,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-chau" title="Cô Châu">
+          <a class="list-top-movie-link" href="/phim-moi/mac-ket-cao-nguyen-bi-an" title="Mắc kẹt: Cao nguyên bí ẩn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-chau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mac-ket-cao-nguyen-bi-an-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Châu
+             Mắc kẹt: Cao nguyên bí ẩn
             </span>
             <span class="list-top-movie-item-en">
-             A Lonely Hero's Journey
+             Entrapped
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
