add new website from server na

--- a/xem-phim-bo/tu-phuong-quan/index.html
+++ b/xem-phim-bo/tu-phuong-quan/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1660,18 +1660,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-he-sao-hoa" title="Thế hệ sao Hỏa">
+          <a class="list-top-movie-link" href="/phim-moi/san-tien-thuong" title="Săn Tiền Thưởng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-he-sao-hoa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/san-tien-thuong-2014-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thế hệ sao Hỏa
+             Săn Tiền Thưởng
             </span>
             <span class="list-top-movie-item-en">
-             The Mars Generation
+             The Huntresses
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1682,18 +1682,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trinh-tiet-kieu-my" title="Trinh Tiết Kiểu Mỹ">
+          <a class="list-top-movie-link" href="/phim-moi/di-ve-phia-lua" title="Đi Về Phía Lửa">
            <span class="status">
-            HD Vietsub
+            HD Việt Nam
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trinh-tiet-kieu-my-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/di-ve-phia-lua-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trinh Tiết Kiểu Mỹ
+             Đi Về Phía Lửa
             </span>
             <span class="list-top-movie-item-en">
-             American Virgin
+             Đi Về Phía Lửa
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1704,18 +1704,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguyet-thuong-trung-hoa" title="Nguyệt Thượng Trùng Hoả">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-moi" title="Người mới">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguyet-thuong-trung-hoa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-moi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nguyệt Thượng Trùng Hoả
+             Người mới
             </span>
             <span class="list-top-movie-item-en">
-             And The Winner Is Love
+             Something New
+            </span>
+            <span class="list-top-movie-item-view">
+             6 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/khung-bo-quoc-te-2" title="Khủng bố quốc tế">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khung-bo-quoc-te-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Khủng bố quốc tế
+            </span>
+            <span class="list-top-movie-item-en">
+             Extraction
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1726,43 +1748,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dragon" title="Dragon">
+          <a class="list-top-movie-link" href="/phim-moi/khi-trai-dao-chin" title="Khi Trái Đào Chín">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dragon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-trai-dao-chin-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dragon
+             Khi Trái Đào Chín
             </span>
             <span class="list-top-movie-item-en">
-             Dragon
+             The 33D Invader
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/petes-dragon" title="Pete’s Dragon">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/petes-dragon-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Pete’s Dragon
-            </span>
-            <span class="list-top-movie-item-en">
-             Pete's Dragon
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
